# Ollama-MCP-Server

./: .env  .env.example  .flake8  .gitignore  =23.12.1  Dockerfile  Dockerfile.python  IMPLEMENTATION_SUMMARY.md  INSTRUCTIE.md  Makefile  README.md  coverage.xml  docker-compose.yml  law.ai  package-lock.json  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  server.js
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml
ai_core/: learning_cycle.js
config/: ai_status.json
config/examples/examples/: code-feedback-demo.js
config/legacy/: eslint.config.js  jest.config.json
config/settings/: memory_config.json
docker/: Dockerfile.python  docker-compose.yml
docs/: CI_DOCKER_SETUP.md  MCP_GATEWAY_FUNCTIONS.md  README.md  ai-code-feedback.md
examples/: enhanced-code-feedback-demo.js
legacy/: law.ai  package-lock.json  package.json  server.js
legacy/ai_core/: law_enforcer.js  snapshot_mem.js
legacy/governance/: governance.vote  law_control.governance
legacy/src/handlers/: tools.js
logic/: pattern_detector.js  proposed_logic_update.ai
mcp_devops_server/config/: __init__.py  settings.py
mcp_devops_server/tools/: infrastructure.py  mcp_gateway.py  ollama.py  registry.py
mcp_devops_server/utils/: logging.py
ollama_mcp_devops_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: docker-build.sh  docker-start.sh  mcp-gateway-connect.py  setup-dev.sh
scripts/docker/: docker-build.sh  docker-start.sh
scripts/gateway/: mcp-gateway-connect.py  mcp-gateway-demo.sh
src/: __init__.py  server.js
src/config/: index.js
src/handlers/: schemas.js  tools.js
src/ollama_mcp_server/: __init__.py  main.py
src/ollama_mcp_server/config/: __init__.py  settings.py
src/ollama_mcp_server/server/: __init__.py  mcp_server.py
src/ollama_mcp_server/tools/: __init__.py  base_tool.py  git.py  github.py  infrastructure.py  mcp_gateway.py  ollama.py  playwright.py  registry.py
src/ollama_mcp_server/utils/: __init__.py  logging.py
src/utils/: http-client.js  logger.js  validation.js
tests/: ai-core.test.js  code-feedback.test.js  config.test.js  integration.test.js  schemas.test.js  setup.js  tooling-enhancements.test.js  validation.test.js
tests/legacy/: ai-core.test.js  schemas.test.js  tooling-enhancements.test.js
tests/python/: test_basic_functionality.py
